--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             <i class="fa fa-home fa-3x"style="color:rgba(221, 192, 255, 0.486) ;"></i>
               
           </div>
-          <h3>bridges</h3>
+          <h3>Houses</h3>
           <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum
             omnis nemo sapiente in quidem sed dolores cumque! Ut, est aliquid!
